# synapticrag

./: .coverage  .coverage.Abhinavs-MacBook-Pro.local.30919.XeoAwFOx  .env.example  .gitignore  MANIFEST.in  instructions.md  lightrag_requirement.txt  lightrag_requirements.txt  main.py  memory_test_terminal_output.txt  pyproject.toml  readme.md  requirements.txt  setup.py
data/comparison/: agriculture_questions.txt  cs_questions.txt  legal_questions.txt  mix_questions.txt
demo/: app.py  compare_rags.py  naive_rag.py
demo/data/comparison/: agriculture_questions.txt  cs_questions.txt  legal_questions.txt  mix_questions.txt
docs/: 01_introduction.md  02_architecture.md  03_implementation.md  04_results.md  05_discussion.md  06_conclusion.md  technical_appendix.md
examples/: basic_usage.ipynb
synaptic/: __init__.py  adapter.py  config.py  pipeline.py  text_splitter.py  utils.py
synaptic/graph/: __init__.py  build_graph.py  embeddings.py  pyG_utils.py  retrieval.py
synaptic/llm/: __init__.py  claude_model.py  llm_interface.py  prompts.py
synaptic/memory/: __init__.py  clue_generator.py  memorizer.py  memory_model.py
synaptic/storage/: base.py  graph_storage.py  kv_storage.py  vector_storage.py
tests/: __init__.py  benchmark_longbench.py  benchmark_ultradomain.py  compare_rags.py  download_longbench.py  download_ultradomain.py  naive_rag.py  prepare_comparison_data.py  test_graph.py  test_integration.py  test_memory.py  test_pyg_utils.py  test_retrieval.py
